Aggiornamento viste: nuovi HTML, assets e index

--- a/Frontend/public/home_page/home_page.html
+++ b/Frontend/public/home_page/home_page.html
@@ -10,29 +10,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<script id="tailwind-config">
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-                extend: {
-                    colors: {
-                        "primary": "#137fec",
-                        "background-light": "#f6f7f8",
-                        "background-dark": "#101922",
-                    },
-                    fontFamily: {
-                        "display": ["Manrope", "sans-serif"]
-                    },
-                    borderRadius: { "DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px" },
-                },
-            },
-        }
-    </script>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
+<link href="../assets/css/style.css" rel="stylesheet"/>
+<script src="../assets/js/tailwind-config.js"></script>
   </head>
 <body class="bg-background-light dark:bg-background-dark text-[#111418] dark:text-white font-display overflow-x-hidden">
 <div class="relative flex h-auto min-h-screen w-full flex-col">
@@ -76,7 +55,7 @@
 <div class="flex flex-col gap-4 p-4">
 <div class="grid grid-cols-2 gap-4">
 <!-- Privato Button -->
-<button class="group relative flex flex-col justify-between p-5 rounded-2xl bg-gradient-to-br from-[#137fec] to-[#0b4e92] text-white shadow-lg aspect-[4/5] overflow-hidden">
+<button onclick="navigateTo('account_privati')" class="group relative flex flex-col justify-between p-5 rounded-2xl bg-gradient-to-br from-[#137fec] to-[#0b4e92] text-white shadow-lg aspect-[4/5] overflow-hidden">
 <div class="absolute right-[-20px] top-[-20px] opacity-10 group-hover:opacity-20 transition-opacity">
 <span class="material-symbols-outlined text-[150px]">lock</span>
 </div>
@@ -85,11 +64,11 @@
 </div>
 <div class="text-left z-10">
 <h3 class="text-xl font-bold mb-1">Privato</h3>
-<p class="text-blue-100 text-sm font-medium">Cassaforte Personale</p>
+<p class="text-blue-100 text-sm font-medium">Accedi ai tuoi dati privati</p>
 </div>
 </button>
 <!-- Azienda Button -->
-<button class="group relative flex flex-col justify-between p-5 rounded-2xl bg-gradient-to-br from-[#10b981] to-[#047857] text-white shadow-lg aspect-[4/5] overflow-hidden">
+<button onclick="navigateTo('lista_aziende')" class="group relative flex flex-col justify-between p-5 rounded-2xl bg-gradient-to-br from-[#10b981] to-[#047857] text-white shadow-lg aspect-[4/5] overflow-hidden">
 <div class="absolute right-[-20px] top-[-20px] opacity-10 group-hover:opacity-20 transition-opacity">
 <span class="material-symbols-outlined text-[150px]">apartment</span>
 </div>
@@ -98,7 +77,7 @@
 </div>
 <div class="text-left z-10">
 <h3 class="text-xl font-bold mb-1">Azienda</h3>
-<p class="text-green-100 text-sm font-medium">Gestione Risorse</p>
+<p class="text-green-100 text-sm font-medium">Gestisci i dati aziendali</p>
 </div>
 </button>
 </div>
@@ -167,12 +146,5 @@
 <div class="h-[env(safe-area-inset-bottom)] bg-transparent"></div>
 </div>
 </div>
-<style>
-        .filled {
-            font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
-        }
-        .pb-safe {
-            padding-bottom: env(safe-area-inset-bottom, 20px);
-        }
-    </style>
+<script src="../assets/js/main.js"></script>
 </body></html>
