--- a/Frontend/public/imposta_nuova_password/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password/imposta_nuova_password.html
@@ -1,127 +1,59 @@
-<!DOCTYPE html>
 
-<html lang="it"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Imposta Nuova Password</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&amp;family=Noto+Sans:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<script id="tailwind-config">
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-                extend: {
-                    colors: {
-                        "primary": "#137fec",
-                        "background-light": "#f6f7f8",
-                        "background-dark": "#101922",
-                    },
-                    fontFamily: {
-                        "display": ["Inter", "Noto Sans", "sans-serif"]
-                    },
-                    borderRadius: { "DEFAULT": "0.5rem", "lg": "1rem", "xl": "1.5rem", "full": "9999px" },
-                },
-            },
-        }
-    </script>
-<style>
-        /* Custom scrollbar for a cleaner look if needed */
-        ::-webkit-scrollbar {
-            width: 6px;
-        }
-        ::-webkit-scrollbar-track {
-            background: transparent;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #cbd5e1;
-            border-radius: 3px;
-        }
-        .dark ::-webkit-scrollbar-thumb {
-            background: #475569;
-        }
-    </style>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-  </head>
-<body class="bg-background-light dark:bg-background-dark font-display antialiased">
-<div class="relative flex min-h-screen w-full flex-col overflow-hidden">
-<!-- Header / Nav (Minimal) -->
-<div class="flex items-center justify-between p-4">
-<button class="group flex h-10 w-10 items-center justify-center rounded-full bg-white dark:bg-gray-800 shadow-sm border border-gray-100 dark:border-gray-700 transition-colors hover:bg-gray-50 dark:hover:bg-gray-700">
-<span class="material-symbols-outlined text-gray-900 dark:text-white" style="font-size: 20px;">arrow_back</span>
-</button>
-<div class="flex-1"></div> <!-- Spacer -->
-</div>
-<!-- Main Content -->
-<main class="flex-1 px-5 pb-8 flex flex-col items-center w-full max-w-md mx-auto">
-<!-- Hero Illustration -->
-<div class="mb-6 mt-2 flex h-24 w-24 items-center justify-center rounded-3xl bg-primary/10 dark:bg-primary/20 p-4 shadow-[0_8px_30px_rgb(0,0,0,0.04)] dark:shadow-none">
-<span class="material-symbols-outlined text-primary" style="font-size: 48px;">lock_reset</span>
-</div>
-<!-- Headings -->
-<h1 class="mb-2 text-center text-2xl font-bold tracking-tight text-[#111418] dark:text-white">Imposta Nuova Password</h1>
-<p class="mb-8 text-center text-base font-normal leading-relaxed text-[#617589] dark:text-gray-400">
-                Inserisci la tua nuova password qui sotto per accedere nuovamente al tuo account in sicurezza.
-            </p>
-<!-- Form Fields -->
-<div class="w-full space-y-6">
-<!-- New Password Field -->
-<div class="flex flex-col gap-2">
-<label class="text-base font-medium leading-normal text-[#111418] dark:text-gray-200">Nuova Password</label>
-<div class="group flex w-full items-stretch rounded-xl border border-[#dbe0e6] dark:border-gray-700 bg-white dark:bg-gray-800 transition-all focus-within:border-primary focus-within:ring-4 focus-within:ring-primary/20">
-<input class="flex w-full min-w-0 flex-1 resize-none bg-transparent px-4 py-3.5 text-base text-[#111418] dark:text-white placeholder-[#617589] dark:placeholder-gray-500 focus:outline-none border-none focus:ring-0 rounded-l-xl" placeholder="••••••••" type="password"/>
-<button class="flex items-center justify-center px-4 text-[#617589] dark:text-gray-400 hover:text-primary transition-colors focus:outline-none rounded-r-xl">
-<span class="material-symbols-outlined" style="font-size: 24px;">visibility_off</span>
-</button>
-</div>
-</div>
-<!-- Password Requirements Checklist -->
-<!-- Reusing the checklist logic but styling for dark mode compatibility -->
-<div class="rounded-xl bg-gray-50 dark:bg-gray-800/50 p-4 border border-gray-100 dark:border-gray-800" style="--checkbox-tick-svg: url('data:image/svg+xml,%3csvg viewBox=%270 0 16 16%27 fill=%27rgb(255,255,255)%27 xmlns=%27http://www.w3.org/2000/svg%27%3e%3cpath d=%27M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z%27/%3e%3c/svg%3e');">
-<div class="space-y-3">
-<label class="flex cursor-pointer items-center gap-x-3">
-<input checked="" class="h-5 w-5 rounded border-[#dbe0e6] dark:border-gray-600 border-2 bg-white dark:bg-gray-700 text-primary checked:bg-primary checked:border-primary checked:bg-[image:--checkbox-tick-svg] focus:ring-0 focus:ring-offset-0 focus:outline-none transition-all" onclick="return false;" type="checkbox"/>
-<p class="text-sm font-medium text-[#111418] dark:text-gray-300">Minimo 8 caratteri</p>
-</label>
-<label class="flex cursor-pointer items-center gap-x-3">
-<input class="h-5 w-5 rounded border-[#dbe0e6] dark:border-gray-600 border-2 bg-white dark:bg-gray-700 text-primary checked:bg-primary checked:border-primary checked:bg-[image:--checkbox-tick-svg] focus:ring-0 focus:ring-offset-0 focus:outline-none transition-all" type="checkbox"/>
-<p class="text-sm font-medium text-[#111418] dark:text-gray-300">Un carattere speciale</p>
-</label>
-<label class="flex cursor-pointer items-center gap-x-3">
-<input class="h-5 w-5 rounded border-[#dbe0e6] dark:border-gray-600 border-2 bg-white dark:bg-gray-700 text-primary checked:bg-primary checked:border-primary checked:bg-[image:--checkbox-tick-svg] focus:ring-0 focus:ring-offset-0 focus:outline-none transition-all" type="checkbox"/>
-<p class="text-sm font-medium text-[#111418] dark:text-gray-300">Una maiuscola</p>
-</label>
-</div>
-</div>
-<!-- Confirm Password Field -->
-<div class="flex flex-col gap-2">
-<label class="text-base font-medium leading-normal text-[#111418] dark:text-gray-200">Conferma Nuova Password</label>
-<div class="group flex w-full items-stretch rounded-xl border border-[#dbe0e6] dark:border-gray-700 bg-white dark:bg-gray-800 transition-all focus-within:border-primary focus-within:ring-4 focus-within:ring-primary/20">
-<input class="flex w-full min-w-0 flex-1 resize-none bg-transparent px-4 py-3.5 text-base text-[#111418] dark:text-white placeholder-[#617589] dark:placeholder-gray-500 focus:outline-none border-none focus:ring-0 rounded-l-xl" placeholder="••••••••" type="password"/>
-<button class="flex items-center justify-center px-4 text-[#617589] dark:text-gray-400 hover:text-primary transition-colors focus:outline-none rounded-r-xl">
-<span class="material-symbols-outlined" style="font-size: 24px;">visibility_off</span>
-</button>
-</div>
-</div>
-<!-- Submit Button -->
-<div class="pt-4">
-<button class="w-full rounded-xl bg-primary py-4 text-center text-base font-bold text-white shadow-lg shadow-blue-500/30 hover:bg-blue-600 hover:shadow-blue-500/50 active:scale-[0.98] transition-all focus:outline-none focus:ring-4 focus:ring-primary/30">
-                        Imposta Password
+<!DOCTYPE html>
+<html class="dark" lang="it">
+<head>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Imposta Nuova Password</title>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="../assets/css/style.css" rel="stylesheet"/>
+    <script src="../assets/js/tailwind-config.js"></script>
+</head>
+<body class="font-display bg-background-light dark:bg-background-dark text-[#111418] dark:text-white antialiased">
+<div class="relative flex h-full min-h-screen w-full flex-col items-center justify-center p-6 lg:p-10 overflow-x-hidden">
+    <div class="absolute top-4 left-4">
+        <button class="flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-gray-200 dark:hover:bg-gray-800 transition-colors" onclick="navigateTo('accedi')">
+            <span class="material-symbols-outlined text-2xl">arrow_back</span>
+        </button>
+    </div>
+    <div class="w-full max-w-sm flex flex-col items-center">
+        <div class="mb-8 p-5 bg-primary/10 rounded-full">
+            <div class="p-4 bg-primary/20 rounded-full">
+                <span class="material-symbols-outlined text-4xl text-primary">password</span>
+            </div>
+        </div>
+        <h1 class="text-3xl font-bold text-center mb-3">Imposta Nuova Password</h1>
+        <p class="text-base text-center text-[#617589] dark:text-gray-400 mb-8">La tua nuova password deve essere diversa da quella precedente.</p>
+        <div class="w-full space-y-5">
+            <div class="flex flex-col gap-2">
+                <label class="text-sm font-medium pl-1">Nuova Password</label>
+                <div class="relative flex items-center w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] focus-within:border-primary focus-within:ring-2 focus-within:ring-primary/20 transition-all">
+                    <span class="material-symbols-outlined text-[#617589] pl-4">lock</span>
+                    <input class="flex w-full min-w-0 flex-1 resize-none bg-transparent px-4 py-3.5 text-base text-[#111418] dark:text-white placeholder-[#617589] dark:placeholder-gray-500 focus:outline-none border-none focus:ring-0 rounded-l-xl" placeholder="••••••••" type="password"/>
+                    <button class="toggle-password pr-4 text-[#617589] hover:text-primary">
+                        <i class="fas fa-eye"></i>
                     </button>
+                </div>
+            </div>
+            <div class="flex flex-col gap-2">
+                <label class="text-sm font-medium pl-1">Conferma Nuova Password</label>
+                <div class="relative flex items-center w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] focus-within:border-primary focus-within:ring-2 focus-within:ring-primary/20 transition-all">
+                    <span class="material-symbols-outlined text-[#617589] pl-4">lock_reset</span>
+                    <input class="flex w-full min-w-0 flex-1 resize-none bg-transparent px-4 py-3.5 text-base text-[#111418] dark:text-white placeholder-[#617589] dark:placeholder-gray-500 focus:outline-none border-none focus:ring-0 rounded-l-xl" placeholder="••••••••" type="password"/>
+                    <button class="toggle-password pr-4 text-[#617589] hover:text-primary">
+                        <i class="fas fa-eye"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <button class="mt-8 w-full h-14 bg-primary hover:bg-blue-600 text-white font-bold text-lg rounded-xl shadow-lg shadow-primary/30 transition-all active:scale-[0.98]">
+            Salva Password
+        </button>
+    </div>
 </div>
-</div>
-</main>
-<!-- Footer / Helper -->
-<div class="p-4 text-center mb-2">
-<p class="text-sm text-[#617589] dark:text-gray-500">
-                Ti sei ricordato la password? 
-                <a class="font-semibold text-primary hover:text-blue-600 hover:underline" href="#">Torna al Login</a>
-</p>
-</div>
-</div>
-</body></html>
+<script src="../assets/js/main.js"></script>
+</body>
+</html>
