--- a/Frontend/public/verifica_email/verifica_email.html
+++ b/Frontend/public/verifica_email/verifica_email.html
@@ -1,37 +1,14 @@
 <!DOCTYPE html>
-
 <html class="dark" lang="en"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Verifica Email</title>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<script id="tailwind-config">
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-            extend: {
-                colors: {
-                "primary": "#137fec",
-                "background-light": "#f6f7f8",
-                "background-dark": "#101922",
-                },
-                fontFamily: {
-                "display": ["Manrope", "sans-serif"]
-                },
-                borderRadius: {"DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px"},
-            },
-            },
-        }
-    </script>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-  </head>
+<link href="../assets/css/style.css" rel="stylesheet"/>
+<script src="../assets/js/tailwind-config.js"></script>
+</head>
 <body class="font-display bg-background-light dark:bg-background-dark min-h-screen flex flex-col relative overflow-x-hidden">
 <!-- Top Navigation -->
 <div class="flex items-center justify-between p-4 sticky top-0 z-10">
@@ -78,13 +55,13 @@
 </div>
 <!-- Actions -->
 <div class="w-full space-y-6">
-<button class="w-full bg-primary hover:bg-blue-600 text-white font-bold h-14 rounded-xl shadow-lg shadow-primary/25 transition-all active:scale-[0.98] flex items-center justify-center text-lg">
+<button class="w-full bg-primary hover:bg-blue-600 text-white font-bold h-14 rounded-xl shadow-lg shadow-primary/25 transition-all active:scale-[0.98] flex items-center justify-center text-lg" onclick="navigateTo('home_page')">
                 Verifica
             </button>
 <div class="text-center">
 <p class="text-[#637588] dark:text-[#93a1b0] text-sm">
                     Non hai ricevuto il codice? 
-                    <button class="text-primary font-bold hover:text-primary/80 transition-colors ml-1 inline-flex items-center gap-1">
+                    <button class="text-primary font-bold hover:text-primary/80 transition-colors ml-1 inline-flex items-center gap-1" onclick="navigateTo('verifica_email')">
                         Invia di nuovo
                         <span class="material-symbols-outlined text-sm">refresh</span>
 </button>
@@ -92,4 +69,5 @@
 </div>
 </div>
 </div>
-</body></html>
+</body>
+</html>
