--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html class="light" lang="it"><head>
+<html class="dark" lang="it"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Reset Password</title>
@@ -16,12 +16,12 @@
   </head>
 <body class="bg-background-light dark:bg-background-dark font-display antialiased flex flex-col items-center justify-center min-h-screen p-0 sm:p-4">
 <!-- Phone Screen Container -->
-<div class="relative flex h-full w-full max-w-md flex-col bg-white dark:bg-background-dark sm:rounded-2xl sm:shadow-2xl sm:h-auto sm:min-h-[700px] overflow-hidden group/design-root">
+<div class="relative flex h-full w-full max-w-md flex-col dark:bg-background-dark sm:rounded-2xl sm:shadow-2xl sm:h-auto sm:min-h-[700px] overflow-hidden group/design-root">
 <!-- Top App Bar -->
 <div class="flex items-center px-4 py-4 justify-between z-10">
-<button aria-label="Go back" class="flex size-10 items-center justify-center rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors text-slate-900 dark:text-white">
-<span class="material-symbols-outlined text-[24px]">arrow_back</span>
-</button>
+    <a href="index.html" aria-label="Go back" class="flex size-10 items-center justify-center rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors text-slate-900 dark:text-white">
+        <span class="material-symbols-outlined text-[24px]">arrow_back</span>
+    </a>
 <!-- Spacer to balance layout if title is needed, otherwise left empty for cleaner look -->
 <div class="w-10"></div>
 </div>
@@ -44,7 +44,7 @@
                 Non preoccuparti! Inserisci la tua email e ti invieremo le istruzioni per ripristinare il tuo account in sicurezza.
             </p>
 <!-- Form -->
-<form class="flex flex-col gap-6" onsubmit="event.preventDefault();">
+<form id="reset-form" class="flex flex-col gap-6">
 <!-- Text Field -->
 <div class="flex flex-col gap-2">
 <label class="text-slate-900 dark:text-white text-sm font-medium leading-normal ml-1" for="email">Email</label>
@@ -73,4 +73,16 @@
 <!-- Decorative Bottom Element (Optional modern touch) -->
 <div class="h-6 w-full bg-white dark:bg-background-dark"></div>
 </div>
-<script src="assets/js/main.js"></script></body></html>
+<div id="notification-banner" class="hidden fixed top-4 right-4 p-4 rounded-lg text-white z-50"></div>
+<script src="assets/js/main.js"></script>
+<script type="module">
+    import { resetPassword } from './assets/js/auth.js';
+
+    const resetForm = document.getElementById('reset-form');
+    resetForm.addEventListener('submit', async (event) => {
+        event.preventDefault();
+        const email = document.getElementById('email').value;
+        await resetPassword(email);
+    });
+</script>
+</body></html>
