Feat/session 2 auth flow 6565990115020950093 (#21)
* feat: Refactor navigation to use hyperlinks (#8)

This commit refactors the navigation within the "Aziende" (Companies) user flow to use standard `<a>` tags instead of the JavaScript `navigateTo` function.

The following pages were updated:
- `home_page.html`
- `lista_aziende.html`
- `aggiungi_nuova_azienda.html`

This change improves maintainability and accessibility by using standard web platform features for navigation. An end-to-end test was created and successfully run to verify the new navigation flow.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

* feat(auth): implement firebase authentication and onboarding flow (#9)

This commit integrates Firebase Authentication for the core user journeys: registration, login, and password reset.

Key changes include:
- Added `registerUser`, `loginUser`, and password reset functions to `auth.js`.
- Connected the UI forms in `index.html`, `registrati.html`, `reset_password.html`, and `imposta_nuova_password.html` to the new authentication logic.
- Implemented a unified in-page notification system in `utils.js` for user feedback, replacing browser alerts.
- Standardized UI elements, replacing Font Awesome icons with Material Symbols and standardizing navigation to use `<a>` tags.
- Added a `checkAuthState` call to all relevant pages to protect routes and handle redirects for authenticated/unauthenticated users.
- Created a Playwright test suite to verify the frontend logic and UI behavior of the authentication flows.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

* Feat/session 1 firebase setup 1531537161775927403 (#10)

* feat: establish Firebase foundation and JS utilities

- Initializes Firebase services (Auth, Firestore, Storage) and provides a configuration snippet.
- Defines the complete Firestore data structure in `firestore_structure.md`.
- Creates `uid.js` 

--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -1,15 +1,17 @@
-
 <!DOCTYPE html>
 <html class="dark" lang="it">
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Account Privati</title>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
+    <!-- Tailwind CSS, Google Fonts, Material Symbols -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <link href="assets/css/style.css" rel="stylesheet"/>
-    <script src="assets/js/tailwind-config.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&amp;display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
+    <script src="/Frontend/public/assets/js/tailwind-config.js"></script>
+    <style>
+        .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24; }
+    </style>
 </head>
 <body class="font-display bg-background-light dark:bg-background-dark text-[#111418] dark:text-white antialiased">
 <div class="relative flex h-full min-h-screen w-full flex-col overflow-x-hidden">
@@ -69,7 +71,6 @@
             Aggiungi Account
         </a>
     </div>
-</div>
-<script src="assets/js/main.js"></script>
+    <script type="module" src="/Frontend/public/assets/js/privato.js" defer></script>
 </body>
 </html>
