--- a/Frontend/public/aggiungi_nuova_azienda.html
+++ b/Frontend/public/aggiungi_nuova_azienda.html
@@ -6,22 +6,58 @@
 <title>Aggiungi nuova Azienda</title>
 <!-- Tailwind CSS -->
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<link href="assets/css/style.css" rel="stylesheet"/>
-<script src="assets/js/tailwind-config.js"></script>
 <!-- Theme Config -->
+<script id="tailwind-config">
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        "primary": "#137fec",
+                        "background-light": "#f6f7f8",
+                        "background-dark": "#101922",
+                        "surface-light": "#ffffff",
+                        "surface-dark": "#1a2632",
+                    },
+                    fontFamily: {
+                        "display": ["Inter", "sans-serif"]
+                    },
+                    borderRadius: {"DEFAULT": "0.5rem", "lg": "1rem", "xl": "1.5rem", "full": "9999px"},
+                },
+            },
+        }
+    </script>
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
 <!-- Material Symbols -->
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
+<style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+        /* Hide scrollbar for clean UI */
+        .no-scrollbar::-webkit-scrollbar {
+            display: none;
+        }
+        .no-scrollbar {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+    </style>
+<style>
+    body {
+      min-height: max(884px, 100dvh);
+    }
+  </style>
   </head>
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white antialiased overflow-x-hidden pb-24">
 <!-- Top App Bar -->
 <div class="sticky top-0 z-50 bg-surface-light dark:bg-surface-dark/95 backdrop-blur shadow-sm border-b border-slate-100 dark:border-slate-800 transition-colors">
 <div class="flex items-center p-4 justify-between h-16">
-<button class="text-slate-900 dark:text-white flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">
+<a href="lista_aziende.html" class="text-slate-900 dark:text-white flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">
 <span class="material-symbols-outlined text-[24px]">arrow_back_ios_new</span>
-</button>
+</a>
 <h2 class="text-slate-900 dark:text-white text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-10">
                 Nuova Azienda
             </h2>
@@ -193,36 +229,35 @@
 <button class="flex w-full items-center justify-center rounded-lg bg-primary h-14 text-white text-base font-bold leading-normal shadow-lg shadow-primary/30 active:scale-[0.98] transition-transform">
                 Salva Azienda
             </button>
-<button class="flex w-full items-center justify-center rounded-lg bg-transparent hover:bg-slate-100 dark:hover:bg-slate-800 h-12 text-slate-500 dark:text-slate-400 text-base font-medium leading-normal transition-colors">
+<a href="lista_aziende.html" class="flex w-full items-center justify-center rounded-lg bg-transparent hover:bg-slate-100 dark:hover:bg-slate-800 h-12 text-slate-500 dark:text-slate-400 text-base font-medium leading-normal transition-colors">
                 Annulla
-            </button>
+            </a>
 </div>
 </div>
 <!-- Bottom Navigation Bar -->
 <div class="fixed bottom-0 left-0 right-0 bg-surface-light dark:bg-surface-dark border-t border-slate-200 dark:border-slate-800 pb-safe z-40">
 <div class="flex justify-between items-center h-[60px] px-6 max-w-md mx-auto">
-<div class="flex flex-col items-center justify-center gap-1 w-12 cursor-pointer group">
+<a href="home_page.html" class="flex flex-col items-center justify-center gap-1 w-12 cursor-pointer group">
 <span class="material-symbols-outlined text-slate-400 dark:text-slate-500 group-hover:text-primary transition-colors text-[24px]">home</span>
 <span class="text-[10px] font-medium text-slate-400 dark:text-slate-500 group-hover:text-primary">Home</span>
-</div>
-<div class="flex flex-col items-center justify-center gap-1 w-12 cursor-pointer group">
+</a>
+<a href="account_privati.html" class="flex flex-col items-center justify-center gap-1 w-12 cursor-pointer group">
 <span class="material-symbols-outlined text-slate-400 dark:text-slate-500 group-hover:text-primary transition-colors text-[24px]">lock</span>
 <span class="text-[10px] font-medium text-slate-400 dark:text-slate-500 group-hover:text-primary">Vault</span>
-</div>
+</a>
 <!-- Active State for Companies -->
-<div class="flex flex-col items-center justify-center gap-1 w-12 cursor-pointer">
+<a href="lista_aziende.html" class="flex flex-col items-center justify-center gap-1 w-12 cursor-pointer">
 <div class="bg-primary/10 rounded-full px-4 py-0.5 mb-0.5">
 <span class="material-symbols-outlined text-primary text-[24px] mt-1">domain</span>
 </div>
 <span class="text-[10px] font-bold text-primary">Aziende</span>
-</div>
-<div class="flex flex-col items-center justify-center gap-1 w-12 cursor-pointer group">
+</a>
+<a href="impostazioni.html" class="flex flex-col items-center justify-center gap-1 w-12 cursor-pointer group">
 <span class="material-symbols-outlined text-slate-400 dark:text-slate-500 group-hover:text-primary transition-colors text-[24px]">settings</span>
 <span class="text-[10px] font-medium text-slate-400 dark:text-slate-500 group-hover:text-primary">Opzioni</span>
-</div>
+</a>
 </div>
 <!-- Safe area spacing for iOS home indicator -->
 <div class="h-5 w-full bg-surface-light dark:bg-surface-dark"></div>
 </div>
-<script src="assets/js/main.js"></script>
 </body></html>
