Feat/private section crud 10547712661629352755 (#22)
* feat(private): Implement complete private data and accounts management

This commit introduces the full UI and client-side logic for the private section, as per Session 4 requirements.

Key features include:
- CRUD UI for personal data on `dati_anagrafici_privato.html` with a functional edit/save mode.
- Expandable cards on `account_privati.html` to show/hide account details.
- A detailed view on `dettaglio_account_privato.html` with an open/closed UI toggle, flag display, and dynamic QR code generation.
- A form on `aggiungi_account_privato.html` for creating new accounts, including toggles for "Condiviso" and "Memorandum" flags.
- A "copy to clipboard" function for the QR code image.
- Centralized and refactored all related JavaScript logic into `main.js`.
- Replaced all `onclick` navigation with semantic `<a>` tags.
- Ensured UI consistency using Tailwind CSS and Material Symbols.

* Feat/session 2 auth flow 6565990115020950093 (#21)

* feat: Refactor navigation to use hyperlinks (#8)

This commit refactors the navigation within the "Aziende" (Companies) user flow to use standard `<a>` tags instead of the JavaScript `navigateTo` function.

The following pages were updated:
- `home_page.html`
- `lista_aziende.html`
- `aggiungi_nuova_azienda.html`

This change improves maintainability and accessibility by using standard web platform features for navigation. An end-to-end test was created and successfully run to verify the new navigation flow.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

* feat(auth): implement firebase authentication and onboarding flow (#9)

This commit integrates Firebase Authentication for the core user journeys: registration, login, and password reset.

Key changes include:
- Added `registerUser`, `loginUser`, and password reset functions to `auth.js`.
- Connected the UI forms in `index.html`, `registrati.html`, `reset_password.html`, 

--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -4,8 +4,7 @@
     <meta charset="utf--8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Account Privati</title>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
+    <!-- Tailwind CSS, Google Fonts, Material Symbols -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="/Frontend/public/assets/css/style.css" rel="stylesheet"/>
     <script src="/Frontend/public/assets/js/tailwind-config.js"></script>
@@ -74,6 +73,7 @@
             Aggiungi Account
         </a>
     </div>
+    <script type="module" src="/Frontend/public/assets/js/privato.js" defer></script>
     <script src="/Frontend/public/assets/js/main.js"></script>
 </body>
 </html>
