--- a/Frontend/public/aggiungi_account_privato.html
+++ b/Frontend/public/aggiungi_account_privato.html
@@ -13,6 +13,10 @@
 <body class="font-display bg-background-light dark:bg-background-dark text-[#111418] dark:text-white antialiased">
 <div class="relative flex h-full min-h-screen w-full flex-col overflow-x-hidden max-w-md mx-auto shadow-2xl">
     <div class="flex items-center justify-between p-4 sticky top-0 bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-sm z-10">
+        <a href="account_privati.html" class="flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-gray-200 dark:hover:bg-gray-800 transition-colors">
+            <span class="material-symbols-outlined text-2xl">arrow_back</span>
+        </a>
+        <h1 class="text-lg font-bold flex-1 text-center pr-10">Aggiungi Account</h1>
         <a href="/Frontend/public/account_privati.html" class="flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-gray-200 dark:hover:bg-gray-800 transition-colors">
             <span class="material-symbols-outlined text-2xl">arrow_back</span>
         </a>
@@ -43,6 +47,10 @@
             <label class="text-sm font-medium text-[#111418] dark:text-white pl-1">Password</label>
             <div class="relative">
                 <span class="absolute left-4 top-1/2 -translate-y-1/2 text-[#617589] material-symbols-outlined">lock</span>
+                <input class="w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] h-14 pl-12 pr-12 text-base text-[#111418] dark:text-white placeholder:text-[#617589] focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all" placeholder="••••••••" type="password"/>
+                <button class="toggle-password absolute right-4 top-1/2 -translate-y-1/2 text-[#617589] hover:text-primary transition-colors">
+                    <span class="material-symbols-outlined">visibility</span>
+                </button>
                 <input id="password" class="w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] h-14 pl-12 pr-24 text-base text-[#111418] dark:text-white placeholder:text-[#617589] focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all" placeholder="••••••••" type="password"/>
                 <div class="absolute right-4 top-1/2 -translate-y-1/2 flex items-center gap-2">
                     <button class="copy-button text-[#617589] hover:text-primary" data-copy-target="password">
@@ -65,12 +73,260 @@
             <label class="text-sm font-medium text-[#111418] dark:text-white pl-1">Note (Opzionale)</label>
             <textarea id="notes" class="w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] p-4 text-base placeholder:text-[#617589] focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all" placeholder="Aggiungi dettagli aggiuntivi qui..." rows="4"></textarea>
         </div>
+        <!-- Flags Section -->
+        <div class="space-y-4">
+            <div class="flex items-center justify-between bg-white dark:bg-gray-800 rounded-xl p-4">
+                <div class="flex items-center gap-3">
+                    <span class="material-symbols-outlined text-gray-400">group</span>
+                    <span class="font-medium">Condiviso</span>
+                </div>
+                <label class="relative inline-flex items-center cursor-pointer">
+                    <input type="checkbox" value="" class="sr-only peer">
+                    <div class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-primary"></div>
+                </label>
+            </div>
+            <div class="flex items-center justify-between bg-white dark:bg-gray-800 rounded-xl p-4">
+                <div class="flex items-center gap-3">
+                    <span class="material-symbols-outlined text-gray-400">description</span>
+                    <span class="font-medium">Memorandum</span>
+                </div>
+                <label class="relative inline-flex items-center cursor-pointer">
+                    <input type="checkbox" value="" class="sr-only peer">
+                    <div class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-primary"></div>
+                </label>
+            </div>
+        </div>
     </div>
     <div class="p-4 sticky bottom-0 bg-background-light dark:bg-background-dark">
         <button class="w-full h-14 bg-primary hover:bg-blue-600 text-white font-bold text-lg rounded-xl shadow-lg shadow-primary/30 transition-all active:scale-[0.98]">
             Salva Account
         </button>
     </div>
+<html class="light" lang="it"><head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Nuovo Account Privato</title>
+<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
+<script>
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        "primary": "#137fec",
+                        "background-light": "#f6f7f8",
+                        "background-dark": "#101922",
+                    },
+                    fontFamily: {
+                        "display": ["Inter", "sans-serif"]
+                    },
+                    borderRadius: {
+                        "DEFAULT": "0.5rem",
+                        "lg": "1rem",
+                        "xl": "1.5rem",
+                        "full": "9999px"
+                    },
+                },
+            },
+        }
+    </script>
+<style>.no-scrollbar::-webkit-scrollbar {
+            display: none;
+        }
+        .no-scrollbar {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+        .material-symbols-outlined {
+            font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+        }
+    </style>
+<style>
+        body {
+            min-height: max(884px, 100dvh);
+        }
+    </style>
+<style>
+    body {
+      min-height: max(884px, 100dvh);
+    }
+  </style>
+  </head>
+<body class="bg-background-light dark:bg-background-dark font-display text-[#111418] dark:text-white flex flex-col h-screen overflow-hidden antialiased">
+<header class="flex-none bg-white dark:bg-[#1a222d] border-b border-[#e5e7eb] dark:border-[#2a3441] sticky top-0 z-50">
+<div class="flex items-center p-4 justify-between h-16">
+<button class="flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-gray-100 dark:hover:bg-[#2a3441] transition-colors text-[#111418] dark:text-white">
+<span class="material-symbols-outlined">arrow_back_ios_new</span>
+</button>
+<h2 class="text-[#111418] dark:text-white text-lg font-bold leading-tight flex-1 text-center pr-10">
+                Nuovo Account Privato
+            </h2>
+</div>
+</header>
+<main class="flex-1 overflow-y-auto no-scrollbar pb-32">
+<div class="w-full max-w-md mx-auto px-4 py-6 flex flex-col gap-6">
+<div class="space-y-4">
+<h3 class="text-sm font-semibold text-gray-500 dark:text-gray-400 uppercase tracking-wider ml-1">Informazioni Account</h3>
+<div class="flex flex-col gap-2">
+<label class="text-[#111418] dark:text-white text-base font-medium leading-normal">Nome Account</label>
+<div class="relative">
+<span class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-gray-400">domain</span>
+<input class="w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] h-14 pl-12 pr-4 text-base text-[#111418] dark:text-white placeholder:text-[#617589] focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all" placeholder="Es. Netflix, Amazon, Palestra"/>
+</div>
+</div>
+<div class="flex flex-col gap-2">
+<label class="text-[#111418] dark:text-white text-base font-medium leading-normal">Sito Web</label>
+<div class="relative">
+<span class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-gray-400">language</span>
+<input class="w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] h-14 pl-12 pr-4 text-base text-[#111418] dark:text-white placeholder:text-[#617589] focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all" placeholder="https://www.esempio.com" type="url"/>
+</div>
+</div>
+</div>
+<div class="space-y-4 pt-2">
+<h3 class="text-sm font-semibold text-gray-500 dark:text-gray-400 uppercase tracking-wider ml-1">Credenziali di Accesso</h3>
+<div class="grid grid-cols-1 gap-4">
+<div class="flex flex-col gap-2">
+<label class="text-[#111418] dark:text-white text-base font-medium leading-normal">Utente</label>
+<div class="relative">
+<span class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-gray-400">person</span>
+<input class="w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] h-14 pl-12 pr-4 text-base text-[#111418] dark:text-white placeholder:text-[#617589] focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all" placeholder="Email o Username"/>
+</div>
+</div>
+<div class="flex flex-col gap-2">
+<label class="text-[#111418] dark:text-white text-base font-medium leading-normal">Account</label>
+<div class="relative">
+<span class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-gray-400">folder_shared</span>
+<input class="w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] h-14 pl-12 pr-4 text-base text-[#111418] dark:text-white placeholder:text-[#617589] focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all" placeholder="Codice cliente o identificativo"/>
+</div>
+</div>
+<div class="flex flex-col gap-2">
+<label class="text-[#111418] dark:text-white text-base font-medium leading-normal">Password</label>
+<div class="relative flex items-center">
+<span class="material-symbols-outlined absolute left-4 text-gray-400">lock</span>
+<input class="w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] h-14 pl-12 pr-12 text-base text-[#111418] dark:text-white placeholder:text-[#617589] focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all" placeholder="••••••••" type="password"/>
+<button class="absolute right-4 text-primary hover:text-blue-600 focus:outline-none">
+<span class="material-symbols-outlined">visibility</span>
+</button>
+</div>
+<div class="flex gap-1 mt-1 px-1">
+<div class="h-1 flex-1 bg-primary rounded-full"></div>
+<div class="h-1 flex-1 bg-primary rounded-full"></div>
+<div class="h-1 flex-1 bg-gray-200 dark:bg-gray-700 rounded-full"></div>
+<div class="h-1 flex-1 bg-gray-200 dark:bg-gray-700 rounded-full"></div>
+</div>
+</div>
+</div>
+</div>
+<div class="space-y-4 pt-2">
+<h3 class="text-sm font-semibold text-gray-500 dark:text-gray-400 uppercase tracking-wider ml-1">Dati Referente</h3>
+<div class="flex flex-col gap-2">
+<label class="text-[#111418] dark:text-white text-base font-medium leading-normal">Nome e Cognome Referente</label>
+<div class="relative">
+<span class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-gray-400">badge</span>
+<input class="w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] h-14 pl-12 pr-4 text-base text-[#111418] dark:text-white placeholder:text-[#617589] focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all" placeholder="Es. Mario Rossi"/>
+</div>
+</div>
+<div class="flex gap-4">
+<div class="flex flex-col gap-2 flex-1">
+<label class="text-[#111418] dark:text-white text-base font-medium leading-normal">Telefono</label>
+<div class="relative">
+<span class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-gray-400 text-xl">call</span>
+<input class="w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] h-14 pl-11 pr-4 text-base text-[#111418] dark:text-white placeholder:text-[#617589] focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all" placeholder="02 123..." type="tel"/>
+</div>
+</div>
+<div class="flex flex-col gap-2 flex-1">
+<label class="text-[#111418] dark:text-white text-base font-medium leading-normal">Cellulare</label>
+<div class="relative">
+<span class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-gray-400 text-xl">smartphone</span>
+<input class="w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] h-14 pl-11 pr-4 text-base text-[#111418] dark:text-white placeholder:text-[#617589] focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all" placeholder="333 99..." type="tel"/>
+</div>
+</div>
+</div>
+</div>
+<div class="space-y-4 pt-2">
+<h3 class="text-sm font-semibold text-gray-500 dark:text-gray-400 uppercase tracking-wider ml-1">Dettagli &amp; Opzioni</h3>
+<div class="flex flex-col gap-2">
+<label class="text-[#111418] dark:text-white text-base font-medium leading-normal">Tipo di Account</label>
+<div class="relative">
+<select class="w-full appearance-none rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] h-14 px-4 text-base text-[#111418] dark:text-white focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all">
+<option>Generale</option>
+<option>Bancario</option>
+<option>Servizio Online</option>
+<option>Social Network</option>
+<option>Email</option>
+</select>
+<span class="material-symbols-outlined absolute right-4 top-1/2 -translate-y-1/2 text-gray-500 pointer-events-none">expand_more</span>
+</div>
+</div>
+<div class="flex flex-col gap-2">
+<label class="text-[#111418] dark:text-white text-base font-medium leading-normal">Nota</label>
+<textarea class="w-full rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] bg-white dark:bg-[#1a222d] p-4 text-base text-[#111418] dark:text-white placeholder:text-[#617589] focus:border-primary focus:ring-2 focus:ring-primary/20 outline-none transition-all min-h-[100px] resize-none" placeholder="Note operative, scadenze contrattuali o istruzioni speciali..."></textarea>
+</div>
+<div class="flex items-center justify-between bg-white dark:bg-[#1a222d] p-4 rounded-xl border border-[#dbe0e6] dark:border-[#3a4451]">
+<div class="flex items-center gap-3">
+<div class="bg-blue-100 dark:bg-blue-900/30 p-2 rounded-lg text-primary">
+<span class="material-symbols-outlined">share</span>
+</div>
+<span class="text-[#111418] dark:text-white text-base font-medium">Account Condiviso</span>
+</div>
+<label class="relative inline-flex items-center cursor-pointer">
+<input class="sr-only peer" type="checkbox" value=""/>
+<div class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-2 peer-focus:ring-primary/30 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-primary"></div>
+</label>
+</div>
+<button class="w-full flex items-center justify-between bg-white dark:bg-[#1a222d] p-4 rounded-xl border border-[#dbe0e6] dark:border-[#3a4451] hover:bg-gray-50 dark:hover:bg-[#232d3b] transition-colors text-left group">
+<div class="flex items-center gap-3">
+<div class="bg-purple-100 dark:bg-purple-900/30 p-2 rounded-lg text-purple-600 dark:text-purple-400">
+<span class="material-symbols-outlined">attach_file</span>
+</div>
+<span class="text-[#111418] dark:text-white text-base font-medium">Memorandum &amp; Allegati</span>
+</div>
+<span class="material-symbols-outlined text-gray-400 group-hover:text-primary transition-colors">chevron_right</span>
+</button>
+</div>
+<div class="h-10"></div>
+</div>
+</main>
+<div class="fixed bottom-[88px] left-0 w-full p-4 bg-gradient-to-t from-background-light via-background-light to-transparent dark:from-background-dark dark:via-background-dark pointer-events-none z-40">
+<div class="max-w-md mx-auto pointer-events-auto flex flex-col gap-3">
+<button class="flex w-full items-center justify-center overflow-hidden rounded-xl h-14 bg-primary text-white text-base font-bold leading-normal tracking-[0.015em] hover:bg-blue-600 transition-colors shadow-lg shadow-blue-500/30">
+<span class="material-symbols-outlined mr-2">save</span>
+                Salva Account
+            </button>
+<button class="flex w-full items-center justify-center overflow-hidden rounded-xl h-10 bg-transparent text-gray-500 dark:text-gray-400 text-sm font-medium hover:text-[#111418] dark:hover:text-white transition-colors">
+                Annulla
+            </button>
+</div>
+</div>
+<nav class="flex-none h-[88px] bg-white dark:bg-[#1a222d] border-t border-[#e5e7eb] dark:border-[#2a3441] pb-6 z-50">
+<div class="grid grid-cols-4 h-full items-center justify-items-center">
+<a class="flex flex-col items-center justify-center gap-1 text-gray-400 hover:text-primary transition-colors" href="#">
+<span class="material-symbols-outlined text-2xl">home</span>
+<span class="text-[10px] font-medium">Home</span>
+</a>
+<a class="flex flex-col items-center justify-center gap-1 text-primary" href="#">
+<div class="bg-primary/10 px-4 py-1 rounded-full">
+<span class="material-symbols-outlined text-2xl fill-current">lock_person</span>
+</div>
+<span class="text-[10px] font-medium">Personale</span>
+</a>
+<a class="flex flex-col items-center justify-center gap-1 text-gray-400 hover:text-primary transition-colors" href="#">
+<span class="material-symbols-outlined text-2xl">search</span>
+<span class="text-[10px] font-medium">Cerca</span>
+</a>
+<a class="flex flex-col items-center justify-center gap-1 text-gray-400 hover:text-primary transition-colors" href="#">
+<span class="material-symbols-outlined text-2xl">settings</span>
+<span class="text-[10px] font-medium">Opzioni</span>
+</a>
+</div>
+</nav>
+
+</body></html>
+=======
     <script src="/Frontend/public/assets/js/main.js"></script>
 </body>
 </html>
