fix: Resolve all merge conflicts (#23)
This commit resolves all merge conflicts across the project. The conflicts arose from a combination of refactoring and new feature implementation. The resolution strategy was to prioritize the more modern and feature-rich UI changes from the incoming branch, while preserving critical functionality (like script tags) from the `HEAD`.

The following files were modified:
- `Frontend/public/account_azienda.html`
- `Frontend/public/account_privati.html`
- `Frontend/public/aggiungi_account_privato.html`
- `Frontend/public/assets/js/db.js`
- `Frontend/public/assets/js/privato.js`
- `Frontend/public/dati_anagrafici_privato.html`
- `Frontend/public/dati_azienda.html`
- `Frontend/public/dettaglio_account_azienda.html`
- `Frontend/public/dettaglio_account_privato.html`
- `Frontend/public/dettaglio_scadenza.html`
- `Frontend/public/home_page.html`
- `Frontend/public/imposta_nuova_password.html`
- `Frontend/public/index.html`
- `Frontend/public/registrati.html`
- `Frontend/public/scadenze.html`
- `Frontend/public/verifica_email.html`

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -190,9 +190,11 @@
     import { logout, checkAuthState } from '/Frontend/public/assets/js/auth.js';
     checkAuthState(); // Protect this page
     const logoutButton = document.getElementById('logout-button');
-    logoutButton.addEventListener('click', () => {
-        logout();
-    });
+    if(logoutButton) {
+        logoutButton.addEventListener('click', () => {
+            logout();
+        });
+    }
 </script>
 </body></html>
 <style>
