--- a/Frontend/public/account_privati.html
+++ b/Frontend/public/account_privati.html
@@ -66,7 +66,8 @@
             </div>
              <!-- Add more account cards here -->
         </div>
-    </div>
+    </main>
+    <!-- Add Button -->
     <div class="p-4 sticky bottom-0 bg-background-light dark:bg-background-dark">
         <a href="/Frontend/public/aggiungi_account_privato.html" class="w-full h-14 bg-primary hover:bg-blue-600 text-white font-bold text-lg rounded-xl shadow-lg shadow-primary/30 transition-all active:scale-[0.98] flex items-center justify-center">
             <span class="material-symbols-outlined">add</span>
