--- a/Frontend/public/dati_anagrafici_privato.html
+++ b/Frontend/public/dati_anagrafici_privato.html
@@ -71,15 +71,9 @@
                     </button>
                 </div>
             </div>
-        </div>
-        <div class="bg-white dark:bg-gray-800 rounded-xl shadow-sm p-4">
-            <h3 class="text-sm font-medium text-gray-500 mb-2">IBAN</h3>
-            <div class="flex items-center">
-                <p id="iban-view" class="flex-1 text-base font-mono">IT60X0542811101000000123456</p>
-                <input type="text" id="iban-edit" class="hidden flex-1 text-base font-mono bg-transparent border-none p-0 focus:ring-0" value="IT60X0542811101000000123456">
-                <button class="copy-button text-primary hover:text-primary/80" data-copy-target="iban-view">
-                    <span class="material-symbols-outlined text-lg">content_copy</span>
-                </button>
+            <div class="bg-white dark:bg-gray-800 rounded-xl shadow-sm p-4">
+                <h3 class="text-sm font-medium text-gray-500 mb-2">IBAN</h3>
+                <p id="iban-view" class="font-mono"></p>
             </div>
         </div>
     </div>
